tutorials/gateway-api/k8s/kannika.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kannika
  namespace: kannika-system
spec:
  gatewayClassName: eg-kind
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: kannika-tls
    allowedRoutes:
      namespaces:
        from: Same
