tutorials/gateway-api/k8s/api.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  namespace: kannika-system
spec:
  parentRefs:
  - name: kannika
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /gql
    backendRefs:
    - name: api
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /rest
    backendRefs:
    - name: api
      port: 8080
