tutorials/gateway-api/k8s/console.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: console
  namespace: kannika-system
spec:
  parentRefs:
  - name: kannika
  rules:
  - backendRefs:
    - name: console
      port: 8080
